--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ body .slide {
 .slide.bigbg h1 {
   margin: 0 -2vw;
   padding: 0 2vw;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.51);
 }
 .slide.bigbg .alt {
   color: rgba(0, 0, 0, 0.1);
@@ -180,7 +180,7 @@ body,
 }
 
 .slide {
-  background-image: linear-gradient(to bottom, #ffffff00, #ffffff99);
+  background-image: linear-gradient(to bottom, #ffffff00, 80%, #ffffff99);
   background-image: conic-gradient(from 0deg at -5% 100%, #36115a, #6921b0 180deg);
 }
 
@@ -275,7 +275,7 @@ pre {
   text-align: left;
   font-size: 1.5rem;
   padding: 10px 20px;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 8px;
   border: 1px solid white;
 }
@@ -351,15 +351,6 @@ a:hover {
   text-decoration: underline;
 }
 
-pre {
-  text-align: left;
-  font-size: 1.5rem;
-  padding: 10px 20px;
-  background: rgba(255, 255, 255, 0.5);
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  border: 1px solid white;
-}
 pre b, pre strong {
   font-weight: strong;
   color: #FFA500;
@@ -424,7 +415,7 @@ ol {
 
 .slide[style*="url("]:not(.invert) .entireul,
 .slide[style*="url("]:not(.invert) li {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.51);
   padding-right: 0.2em;
 }
 .slide[style*="url("]:not(.invert) .entireul li {
@@ -449,6 +440,62 @@ ol {
 
 .solid.solid.solid {
   background: black;
+}
+
+.shiny:nth-of-type(7n+1) .shiney {
+  color: #f90f0f;
+  /* red */
+}
+
+.shiny:nth-of-type(7n+2) .shiney {
+  color: #fc8c00;
+  /* orange */
+}
+
+.shiny:nth-of-type(7n+3) .shiney {
+  color: #ffef00;
+  /* yellow */
+}
+
+.shiny:nth-of-type(7n+4) .shiney {
+  color: #19af3d;
+  /* green */
+}
+
+.shiny:nth-of-type(7n+5) .shiney {
+  color: #3b6ef9;
+  /* blue */
+}
+
+.shiny:nth-of-type(7n+6) .shiney {
+  color: #b033fd;
+  /* purple */
+}
+
+.shiny:nth-of-type(7n) .shiney {
+  color: #f716e6;
+  /* fushia */
+}
+
+.alt {
+  text-shadow: none;
+}
+
+.a11ybox {
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-left: 10vw;
+  float: left;
+  width: 6em;
+  text-align: center;
+}
+
+.superhugetext {
+  font-size: calc((8vh + 8vw) / 2);
+}
+
+.hugetext {
+  font-size: calc((6.5vh + 6.5vw) / 2);
 }
 
 .arrow {
