--- a/sass/_tweet.scss
+++ b/sass/_tweet.scss
@@ -1,4 +1,4 @@
-.TWEET  {
+.TOOT  {
 	blockquote {
 		background-color: white; 
 		width: 80vw;
@@ -39,6 +39,6 @@
 		}
 	}
 }
-.tweet blockquote {
+.toot blockquote {
 	font-size: calc((6vh + 6vw) / 2);
 }
